<resources>
    <string name="app_name">IQBell</string>
    <string name="date_label">Date</string>
    <string name="time_label">Time</string>
    <string name="mode_label">Mode</string>
    <string name="loading">Loading…</string>
    <string name="no_connection">Unable to connect to the MQTT server</string>
    <string name="iq_status">Connection Status:</string>
    <string name="developer">Developer: Danila Gornushko</string>
    <string name="purpose">An application for controlling IQBell Device</string>
    <string name="thanks">Thanks to:</string>
    <string name="names" translatable="false">Антон Науменко, Светлана Науменко, Miha-x64, Алексей Шефлер, Сергей Дынников, Расита Губачикова, Мухаммед Товкуев</string>
    <string name="license">License: GNU General Public License, version 3 (GPLv3)</string>
    <string name="home">Home</string>
    <string name="timetable">Timetable</string>
    <string name="holidays">Holidays</string>
    <string name="about">About</string>
    <string name="send">Send</string>
    <string name="edit">Edit</string>
    <string name="clear">Clear</string>
    <string name="connecting">Connecting…</string>
    <string name="connected">MQTT is connected</string>
    <string name="get_time">Get time</string>
    <string name="unknown">Unknown</string>
    <string name="manual_bells_control">Manual Bells Control</string>
    <string name="manual_bells_control_na">Manual Bells Control Not Available</string>
    <string name="iqbell_time_date">IQBell\'s time and date</string>
    <string name="new_time_date">New time and date</string>
    <string name="set_android_td">Set Android\'s time and date</string>
    <string name="data_was_sent">Data was sent successfully</string>
    <string name="error_sending">Sending data wasn\'t successful</string>
    <string name="timetables_main_tab">Main</string>
    <string name="sending_data">Sending data</string>
    <string name="error">Error</string>
    <string name="repeat">Repeat</string>
    <string name="cancel">Cancel</string>
    <string name="error_updating_extra">Error updating data</string>
    <string name="data_updated">The data was successfully updated</string>
    <string name="timetables_second_tab">Second</string>
    <string name="holidays_short_tab">Short holidays</string>
    <string name="holidays_long_tab">Long holidays</string>
    <string name="short_day">Short classes</string>
    <string name="holiday_day">Holiday</string>
    <string name="choose_short_or_holiday">Make it holiday or set short classes?</string>
    <string name="from">From</string>
    <string name="to">to</string>
    <string name="set_start_date">Set start of the holidays</string>
    <string name="set_end_date">Set end of the holidays</string>
    <string name="workshop">Workshop</string>
    <string name="assembly">Assembly</string>
    <string name="average_ringing">Average ringing</string>
    <string name="classes">Classes</string>
    <string name="non_school_day">Non-school day</string>
    <string name="not_started">Classes haven\'t started</string>
    <string name="finished">Classes have finished</string>
    <string name="not_ringing">Not ringing</string>
    <string name="lesson_ringing">Average ringing</string>
    <string name="workshop_ringing">Workshop ringing</string>
    <string name="assembly_ringing">Assembly ringing</string>
    <string name="normal_classes">Normal classes</string>
    <string name="next_bell">Next bell</string>
    <string name="time_till_next_bell">Time till it</string>
    <string name="settings">Settings</string>
    <string name="login">Sign in</string>
    <string name="address_hint">Server address</string>
    <string name="port_hint">Port</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="logout">Log out</string>
    <string name="welcome">Welcome! Log in to continue</string>
    <string name="not_empty_warning">Fields mustn\'t be empty!</string>
    <string name="not_valid_url_warning">Enter valid URL!</string>
    <string name="day_off">Day Off</string>
    <string name="sun_sat">Sunday/Saturday</string>
    <string name="flash">Flash</string>
    <string name="timezone">Timezone</string>
    <string name="you_chose">You chose</string>
    <string name="further_actions">Further actions will make this day school one</string>
    <string name="average_school_day">Average school day</string>
    <string name="current_timezone">Current timezone</string>
    <string name="choose_correct_date">We can\'t change the past, we must not look too far into the future!</string>
</resources>
