<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_about"
        android:icon="@drawable/ic_info_outline_white_24dp"
        android:title="@string/about"
        android:orderInCategory="4"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_send"
        android:icon="@drawable/ic_send_white_24dp"
        android:title="@string/send"
        android:orderInCategory="3"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_edit_white_24dp"
        android:title="@string/edit"
        android:orderInCategory="1"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_clear"
        android:icon="@drawable/ic_clear_white_24dp"
        android:title="@string/clear"
        android:orderInCategory="2"
        app:showAsAction="always" />
</menu>